[gd_scene load_steps=6 format=3 uid="uid://wde3lkeurwun"]

[ext_resource type="Script" path="res://Experiments/Experiment1/experiment1.gd" id="1_qvcxk"]
[ext_resource type="PackedScene" uid="uid://dodixr1x6oja6" path="res://Experiments/Experiment1/Vertex.tscn" id="2_52weu"]
[ext_resource type="PackedScene" uid="uid://c6hd26h4bml0e" path="res://Experiments/Experiment1/Edge.tscn" id="3_wkmwd"]
[ext_resource type="Script" path="res://Experiments/Experiment1/camera_3d.gd" id="4_3lvhm"]
[ext_resource type="PackedScene" uid="uid://c2rokc52ag5sx" path="res://UI/light.tscn" id="5_4rrpx"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_qvcxk")
vertexScene = ExtResource("2_52weu")
edgeScene = ExtResource("3_wkmwd")

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("4_3lvhm")

[node name="Light" parent="." instance=ExtResource("5_4rrpx")]

[node name="MeshInstance3D" parent="." instance=ExtResource("2_52weu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.61113)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
grow_horizontal = 0
grow_vertical = 2

[node name="FileLocation" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "C:/Users/nicol/Downloads/Dagger1 v4.step"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Vertex" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Vertex"

[node name="Edge" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Edge"

[node name="Wire" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Wire"

[node name="Face" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Face"

[node name="Shell" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Shell"

[node name="Solid" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Solid"

[node name="FaceMesh" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "FaceMesh"

[node name="ChildPool" type="Node" parent="."]

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_button_pressed"]
